--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum provident veritatis et voluptate, quis obcaecati sed excepturi ea neque fuga saepe vero consequatur quae. Odio optio qui quae repudiandae quibusdam!</p>
 </body>
 </html>
